WebCore: Fix for <rdar://problem/7169464> REGRESSION (r47444): PLT is 1% slower due to implementation of :valid and :invalid CSS selectors https://bugs.webkit.org/show_bug.cgi?id=34029

Reviewed by Darin Adler.

If we never hit the valid or invalid selectors for a particular document,
then we'll skip the validity checks when deciding about style sharing.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::canShareStyleWithElement):
(WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector):

* dom/Document.cpp: (WebCore::Document::Document):
* dom/Document.h:
(WebCore::Document::considerValidity):
(WebCore::Document::setConsiderValidity):

LayoutTests: Test for <rdar://problem/7169464> REGRESSION (r47444): PLT is 1% slower due to implementation of :valid and :invalid CSS selectors
https://bugs.webkit.org/show_bug.cgi?id=34029

Reviewed by Darin Adler.

* fast/css/pseudo-valid-dynamic-expected.txt: Added.
* fast/css/pseudo-valid-dynamic.html: Added.



Canonical link: https://commits.webkit.org/45261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53878 268f45cc-cd09-0410-ab3c-d52691b4dbfc