WebCore/css/CSSStyleSelector.cpp
@@ -1002,6 +1002,9 @@ bool CSSStyleSelector::canShareStyleWithElement(Node* n)
                 if (s->isDefaultButtonForForm() != m_element->isDefaultButtonForForm())
                     return false;
                 
+                if (!m_element->document()->containsValidityStyleRules())
+                    return false;
+                
                 bool willValidate = s->willValidate();
                 if (willValidate != m_element->willValidate())
                     return false;
@@ -2410,11 +2413,17 @@ bool CSSStyleSelector::SelectorChecker::checkOneSelector(CSSSelector* sel, Eleme
                 return e && e->isOptionalFormControl();
             case CSSSelector::PseudoRequired:
                 return e && e->isRequiredFormControl();
-            case CSSSelector::PseudoValid:
-                return e && e->willValidate() && e->isValidFormControlElement();
-            case CSSSelector::PseudoInvalid:
-                return e && e->willValidate() && !e->isValidFormControlElement();
-            case CSSSelector::PseudoChecked: {
+            case CSSSelector::PseudoValid: {
+                if (!e)
+                    return false;
+                e->document()->setContainsValidityStyleRules();
+                return e->willValidate() && e->isValidFormControlElement();
+            } case CSSSelector::PseudoInvalid: {
+                if (!e)
+                    return false;
+                e->document()->setContainsValidityStyleRules();
+                return e->willValidate() && !e->isValidFormControlElement();
+            } case CSSSelector::PseudoChecked: {
                 if (!e || !e->isFormControlElement())
                     break;
                 // Even though WinIE allows checked and indeterminate to co-exist, the CSS selector spec says that
